syntax = "proto3";

package order;

option go_package = "github.com/zakariawahyu/go-ohlc/pb";

service OrderService {
  rpc Order(OrderRequest) returns (OrderResponse) {}
}

message OrderRequest {
  string StockCode = 1;
  string OrderNumber = 2;
  string Type = 3;
  string Quantity = 4;
  string Price = 5;
}

message OrderResponse {
  int64 Status = 1;
  string Error = 2;
  string Message = 3;
}

